--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "__MSG_appName__",
-  "version": "0.0.1",
+  "name": "exclude-files-from-chrome-extension",
+  "version": "1.0.0",
   "manifest_version": 2,
-  "description": "__MSG_appDescription__",
+  "description": "exclude-files-from-chrome-extension",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
@@ -10,14 +10,12 @@
   "default_locale": "en",
   "background": {
     "scripts": [
-      "scripts/chromereload.js",
       "scripts/background.js"
     ]
   },
+  "devtools_page": "html/devtools.html",
   "permissions": [
-    "debugger",
-    "webRequest",
-    "*://*.google.com/",
-    "webRequestBlocking"
+    "http://*/*",
+    "https://*/*"
   ]
 }
